@@ -18,7 +18,6 @@ ADD `mode_uc` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ud` enum('Y','N') NOT NULL default 'N',
 ADD `mode_un` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uo` enum('Y','N') NOT NULL default 'N',
-ADD `mode_ut` enum('Y','N') NOT NULL default 'N',
 
 ADD `mode_lk_data` varchar(23) NOT NULL default '',
 ADD `mode_ll_data` int(10) NOT NULL default '0';
@@ -40,6 +39,5 @@ ADD `mode_uc` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uh` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uo` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ur` enum('Y','N') NOT NULL default 'N',
-ADD `mode_ut` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uw` enum('Y','N') NOT NULL default 'N';
 
